# OANP

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  simulate.py
.claude/research/: round1-queries.md  strategy.md
.github/workflows/: ci.yml
demos/: neg_092e1d3d0f11.json  neg_0c28edfb22e0.json  neg_1c4c0da5789c.json  neg_2a3b54284e12.json  neg_33cf83c37632.json  neg_5389c1f81817.json  neg_64dfd6ab5856.json  neg_67b59d12c888.json  neg_795880d497ed.json  neg_b22c94308e2c.json  neg_d314fda5267a.json  neg_d4b50701a799.json  neg_d60581d181c6.json
paper/: oanp-one-pager.md
scenarios/: ai-safety-release.yaml  apple-samsung-patent.yaml  b2b-saas-contract.yaml  custody-bitter-divorce.yaml  escalation-test.yaml  generated-startup-cofounder-equity-split-&-exit-ne.yaml  icc-expedited-test.yaml  iran-nuclear-2015.yaml  landlord-tenant.yaml  nba-lockout-1998.yaml  pharma-patent-dying-patients.yaml  salary-negotiation.yaml  startup-acquisition.yaml  union-strike-deadlock.yaml  us-china-trade.yaml
src/: __init__.py
src/agents/: __init__.py  analyst.py  bci.py  cache.py  events.py  graph.py  mediator.py  negotiator.py  schemas.py  scorer.py  validator.py
src/backend/: main.py  run.py
src/frontend/: index.html  package-lock.json  package.json  vite.config.js
src/ontology/: __init__.py  graph_manager.py  graphiti_types.py
src/protocol/: __init__.py  (+7 more)
tests/: test_analyst.py  test_bci.py  test_scenario_loader.py  test_types.py  test_validator.py  test_views.py
(+55 files in other folders)
